# e3Designer

./: CMakeLists.txt  e3.xml  elementary.xml
cmake/: get_elementary_libs.cmake
e3Designer/App/: Application.cpp  Application.h  CMakeLists.txt  Main.cpp  Main.h  Main.xml  PropItemColor.cpp  PropItemColor.h  PropItemColor.xml  PropItemCombo.cpp  PropItemCombo.h  PropItemCombo.xml  PropItemNumber.cpp  PropItemNumber.h  PropItemNumber.xml  Properties.cpp  Properties.h  Properties.xml  SelectionItem.cpp  SelectionItem.h  SelectionItem.xml  Toolbox.cpp  Toolbox.h  Toolbox.xml  TreeViewItemIconHeader.cpp  TreeViewItemIconHeader.h  TreeViewItemIconHeader.xml  Workspace.cpp  Workspace.h  Workspace.xml  values.xml
e3Designer/App/Android/private/: e3_android_main.cpp
e3Designer/App/private/: MainBase.cpp  MainBase.h  PropItemColorBase.cpp  PropItemColorBase.h  PropItemComboBase.cpp  PropItemComboBase.h  PropItemNumberBase.cpp  PropItemNumberBase.h  PropertiesBase.cpp  PropertiesBase.h  SelectionItemBase.cpp  SelectionItemBase.h  ToolboxBase.cpp  ToolboxBase.h  TreeViewItemIconHeaderBase.cpp  TreeViewItemIconHeaderBase.h  WorkspaceBase.cpp  WorkspaceBase.h  e3DesignerValues.cpp  e3DesignerValues.h
e3Designer/Desktop/: CMakeLists.txt
e3Designer/MobileSimulator/: CMakeLists.txt  main.cpp
e3Designer/assets/e3Designer/locale/: en.json
